--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,10 @@ body {
     width: 30rem;
     height: 100vh;
   }
+
+  .navbar .navbar-nav.active {
+    right: 0;
+  }
 }
 
 /* Mobile Phone */
