--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,19 @@ body {
     background-color: #fff;
     width: 30rem;
     height: 100vh;
+    transition: 0.3s;
   }
 
   .navbar .navbar-nav.active {
     right: 0;
+  }
+
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
   }
 }
 
