1. Update navbar home 2. Add hero section 3. Add header backgorund image

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,16 @@ body {
   display: none;
 }
 
+/* Hero Section */
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url("../img/header-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 /* Media queries */
 
 /* Laptop */
